added start-menu and made sections draggable

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emailjs-com": "^2.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-resizable-rotatable-draggable": "^0.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
